--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -17,14 +17,8 @@ version: 0.2
 
         
 phases:
-  install:
-    commands:
-      - go get
-      - ls 
   build:
     commands:
-      - go build
-artifacts:
-  files:
-    - 'example'
-  name: example_${GOOS}_${GOARCH}_$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
+      - docker build -t git.systementor.se/yacloud/stefan241118 .
+      - docker login -u yacloud -p yacloud1 https://git.systementor.se
+      - docker push git.systementor.se/yacloud/stefan241118
